# Vellum

./: .gitignore  README.md  pyproject.toml
docs/: theory.md
examples/: cifar10_benchmark.py  lbl_insertion.py  mnist_benchmark.py
results/: cifar10_results.txt
tests/: test_awd.py  test_lbl.py
vellum/: __init__.py  layers.py  optimizer.py
