[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vellum-ml"
version = "0.1.0"
description = "Experimental neural network training via Adhesion-Weighted Descent and Liminal Boundary Layers"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0",
]
keywords = [
    "deep-learning",
    "optimizer",
    "pytorch",
    "neural-networks",
    "research",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
benchmark = [
    "torchvision>=0.15",
    "matplotlib>=3.7",
]
dev = [
    "pytest>=7.0",
    "torchvision>=0.15",
    "matplotlib>=3.7",
]

[project.urls]
Homepage = "https://github.com/chancerichardson1989/vellum"
Issues = "https://github.com/chancerichardson1989/vellum/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["vellum*"]

[tool.pytest.ini_options]
testpaths = ["tests"]